--- a/docs/.vitepress/theme/styles/components/gitalk.css
+++ b/docs/.vitepress/theme/styles/components/gitalk.css
@@ -52,8 +52,8 @@
 }
 
 html.dark {
-    --c-brand: #3aa675;
-    --c-brand-light: #349469;
+    --c-brand: #6b75e9;
+    --c-brand-light: #7f75fe;
     --c-bg: #22272e;
     --c-bg-light: #2b313a;
     --c-bg-lighter: #262c34;
